# mirage-1

./: .main.rs  Cargo.toml  main.rs
.dylib/: Cargo.toml
.dylib/src/: lib.rs
app/: .script  Cargo.toml  build.rs
app-loader/: Cargo.toml
app-loader/src/: main.rs
app/src/: lib.rs
high/: Cargo.toml
high/src/: lib.rs  piston.rs  reexport.rs
high/src/av/: capture.rs  mod.rs
high/src/capture/: av.rs  mod.rs
high/src/mirage/: currentize.rs  mod.rs  start.rs
script/: main.rs
src/: app.rs  conf.rs  lib.rs  load.rs  main.rs
src/.bin/: main.rs
src/high/: currentize.rs  start.rs
