[package]
name = "app-loader"
version = "0.1.0"
authors = ["Jony <jonysy@users.noreply.github.com>"]
license = "MIT/Apache-2.0"

[dependencies]
# current = "0.1.2"
libloading = "0.3.1"
log = "0.3.6"
# notify = "^3.0.0"
# piston_window = "0.60.0"

[dependencies.av-foundation]
path = "../../av-foundation"
version = "0.1.0"

[dependencies.high]
path = "../high"

# [dependencies.lychee]
# path = "../../metapackage"
# version = "0.1.0"